--- a/source/css/variables.css
+++ b/source/css/variables.css
@@ -30,19 +30,14 @@
     --bg-key: rgba(128, 128, 128, 0.03);
 
     --text-base: 1rem;
-
     --text-h1: 2.25rem;
     --text-h2: 1.5rem;
     --text-h3: 1.25rem;
     --text-h4: 1.1rem;
     --text-small: 0.875rem;
     --text-kbd: 0.85em;
-
     --line-height-base: 1.55;
     --max-width-content: 85ch;
-
-    --heading-top-multiplier: 2;
-    --heading-bottom-multiplier: 0.5;
 
     --space-xs: 0.25rem;
     --space-s: 0.375rem;
@@ -53,9 +48,9 @@
     --space-xxxl: 1.5rem;
     --space-giant: 2rem;
 
-    --space-p-gap: var(--space-xxxl);
-    --space-heading-gap: var(--space-l);
-    --space-section-gap: calc(var(--space-giant) + var(--space-xxxl));
+    --space-p-gap: var(--space-xl);
+    --space-heading-top: var(--space-xxxl);
+    --space-heading-bottom: var(--space-m);
     --space-blockquote-p: 0.3em;
 }
 
